bug 8852 -right align track number column text in playlist/library r=me
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@9525 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/app/skin/bindings/playlist.css
+++ b/app/skin/bindings/playlist.css
@@ -370,6 +370,16 @@ treecol[bind="http://songbirdnest.com/data/1.0#duration"] > label,
   padding-right:5px;
 }
 
+/**
+*******************************************************************************
+Track No Column
+*******************************************************************************
+*/
+treecol[bind="http://songbirdnest.com/data/1.0#trackNumber"]
+{
+  text-align:right;
+}
+
 /** 
 *******************************************************************************
 Playlist Commands
